mt8135-common: Set IO scheduler to BFQ on boot
Change-Id: I5b28e309272bebf1d6098dcbaa670857a7411411

--- a/rootdir/etc/init.mt8135.rc
+++ b/rootdir/etc/init.mt8135.rc
@@ -106,6 +106,7 @@ on property:sys.boot_completed=1
     write /sys/kernel/mm/ksm/pages_to_scan 100
     write /sys/kernel/mm/ksm/sleep_millisecs 700
     write /sys/kernel/mm/ksm/run 1
+    setprop sys.io.scheduler bfq
 
     # Thermal  
     chown root system /proc/mtktscpu/mtktscpu
