--- a/rootdir/etc/init.power.rc
+++ b/rootdir/etc/init.power.rc
@@ -52,3 +52,4 @@ on property:sys.perf.profile=2
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor "performance"
     write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor "performance"
     write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor "performance"
+    write /sys/devices/platform/dynamic_boost/dynamic_boost "-1 3"
