--- a/rootdir/etc/init.power.rc
+++ b/rootdir/etc/init.power.rc
@@ -19,37 +19,11 @@ on property:sys.boot_completed=1
     write /sys/kernel/mm/ksm/run 1
     setprop sys.io.scheduler bfq
 
-# Powersave
-on property:sys.perf.profile=0
-    write /sys/devices/system/cpu/cpu1/online 1
-    write /sys/devices/system/cpu/cpu2/online 1
-    write /sys/devices/system/cpu/cpu3/online 1
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "powersave"
-    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor "powersave"
-    write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor "powersave"
-    write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor "powersave"
-
-# Balanced
-on property:sys.perf.profile=1
-    write /sys/devices/system/cpu/cpu1/online 1
-    write /sys/devices/system/cpu/cpu2/online 1
-    write /sys/devices/system/cpu/cpu3/online 1
+    # Set CPU governor to ondemand
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "ondemand"
-    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor "ondemand"
     write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor "ondemand"
-    write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor "ondemand"
+
     chown system system /sys/devices/system/cpu/cpu0/cpufreq/ondemand/io_is_busy
     chmod 0750 /sys/devices/system/cpu/cpu0/cpufreq/ondemand/io_is_busy
     chown system system /sys/devices/system/cpu/cpu2/cpufreq/ondemand/io_is_busy
     chmod 0750 /sys/devices/system/cpu/cpu2/cpufreq/ondemand/io_is_busy
-
-# High performance
-on property:sys.perf.profile=2
-    write /sys/devices/system/cpu/cpu1/online 1
-    write /sys/devices/system/cpu/cpu2/online 1
-    write /sys/devices/system/cpu/cpu3/online 1
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "performance"
-    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor "performance"
-    write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor "performance"
-    write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor "performance"
-    write /sys/devices/platform/dynamic_boost/dynamic_boost "-1 3"
