--- a/rootdir/etc/init.mt8135.usb.rc
+++ b/rootdir/etc/init.mt8135.usb.rc
@@ -1,7 +1,7 @@
 on boot
     write /sys/class/android_usb/android0/iManufacturer ${ro.product.manufacturer}
     write /sys/class/android_usb/android0/idVendor ${ro.usb.vid}
-    write /sys/class/android_usb/android0/iProduct "Fire"
+    write /sys/class/android_usb/android0/iProduct ${ro.product.model}
 
 # Used to disable USB when switching states
 on property:sys.usb.config=none
