mt8135-common: Set headphone amplifier control on boot
* No matter what the current volume setting is, this mixer always
  stays at zero. It looks like in the stock ROM, this is managed
  by the framework itself, with some black magic I haven't fully
  understood yet. As a temporary solution, directly set the mixer's
  value using ALSA to get a decent headphone volume control.

--- a/rootdir/etc/init.mt8135.rc
+++ b/rootdir/etc/init.mt8135.rc
@@ -239,3 +239,15 @@ on property:vold.decrypt=trigger_restart_framework
 
 on property:runtime.kisdIsReady=1
     start force_prov
+
+service set_hpl_volume /system/bin/tinymix "Amp HPL Volume" 60
+    class main
+    user root
+    group root
+    oneshot
+
+service set_hpr_volume /system/bin/tinymix "Amp HPR Volume" 60
+    class main
+    user root
+    group root
+    oneshot
