--- a/rootdir/etc/init.mt8135.rc
+++ b/rootdir/etc/init.mt8135.rc
@@ -121,6 +121,16 @@ on fs
     mount ext4 /dev/block/platform/mtk-msdc.0/by-name/persisbackup /persistbackup nodelalloc,discard,errors=panic
     restorecon_recursive /persistbackup
 
+on charger
+    # Set cpu governor to powersave while in charging mode
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor powersave
+    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor powersave
+    write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor powersave
+    write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor powersave
+
+    # Do not set any USB mode while charging
+    setprop sys.usb.config charging
+
 service pvrsrvctl /system/vendor/bin/pvrsrvctl --no-module --start 
     class core
     user root
@@ -251,3 +261,7 @@ service set_hpr_volume /system/bin/tinymix "Amp HPR Volume" 60
     user root
     group root
     oneshot
+
+service battery_charger /sbin/healthd -c
+    class charger
+    critical
